--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.9",
     "nunjucks": "^3.2.3",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
